--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="main-nav">
-            <div class="logo"><img src="/img/pivnyk-logo.png" alt=""></div>    
+            <div class="logo"><img src="img/pivnyk-logo.png" alt=""></div>    
             <ul class="nav">
                     <li class="nav-item">
                       <a class="nav-link active" href="#">home</a>
