--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>
             -------->
             <li class="nav-item">
-              <a class="nav-link" href="/contacts.html">Contacts</a>
+              <a class="nav-link" href="https://romanyakm.github.io/thepivnyk/contacts.html">Contacts</a>
             </li>
           </ul>
         </div>
