--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
             </li>
             -------->
             <li class="nav-item active">
-              <a class="nav-link" href="/contacts.html">Contacts <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="contacts.html">Contacts <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
