--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">THE PIVNYK</a>
+        <a class="navbar-brand" href="#"><img src="img/pivnyk_nav_logo.png" alt="Pivnyk Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <!----------
             <li class="nav-item">
@@ -34,28 +34,23 @@
             </li>
             -------->
             <li class="nav-item active">
-              <a class="nav-link" href="contacts.html">Contacts <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/contacts.html">Contacts <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <article id="contacts-info">
-        <div class="contact-me">
-            <h1>Contact Me!</h1>
-            <hr>
-            <form>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-                    <input type="tel" id="lname" name="lastname" placeholder="Your Phone Number +XXX..">
-                    <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
-                    <input type="submit" value="Submit">
-            </form>
-            <hr>
-        <div class="contact-info">
-            <p>My Phone Number: +380000000</p>
-            <p>My Email: 3412321@gmail.com</p>
-        </div>
-        </div>
+        <img class="contact-photo" src="img/contact_photo.jpg">
+        <h3>Photographer, Creative Director & Cinematographer based in LA</h3>
+        <p>Lauren was raised in Florida and fled to Portland, OR to pursue photography after completing her BFA in 2011. NYC was next, where she continued working as a freelance photographer & graphic designer. Turns out New York has some really cold winters, so it was onward to Los Angeles.</p>
+        <h3>Clientele include:</h3>
+        <p>Prada, Wolford Fashion, Sebastian, Dazed, Urban Outfitters, British Vogue, Sam Edelman, Levi's, Floravere, Schön! Magazine, Pair of Thieves, Beautycon, Select World, CYN, Moses Sumney</p>
+        <hr>
+        <h4>Lets talk!</h4>
+        <p>Email: 2321321@gmail.com</p>
+        <h4>Social media:</h4>
+        <p>Instagram : <a href="#">link_login</a></p>
     </article>
     <footer>
             <hr>
