--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <!----------
             <li class="nav-item">
@@ -34,7 +34,7 @@
             </li>
             -------->
             <li class="nav-item active">
-              <a class="nav-link" href="contacts.html">Contacts <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/contacts.html">Contacts <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -42,15 +42,17 @@
     </header>
     <article id="contacts-info">
         <img class="contact-photo" src="img/contact_photo.jpg">
-        <h3>Photographer, Creative Director & Cinematographer based in LA</h3>
-        <p>Lauren was raised in Florida and fled to Portland, OR to pursue photography after completing her BFA in 2011. NYC was next, where she continued working as a freelance photographer & graphic designer. Turns out New York has some really cold winters, so it was onward to Los Angeles.</p>
-        <h3>Clientele include:</h3>
-        <p>Prada, Wolford Fashion, Sebastian, Dazed, Urban Outfitters, British Vogue, Sam Edelman, Levi's, Floravere, Schön! Magazine, Pair of Thieves, Beautycon, Select World, CYN, Moses Sumney</p>
-        <hr>
-        <h4>Lets talk!</h4>
-        <p>Email: 2321321@gmail.com</p>
-        <h4>Social media:</h4>
-        <p>Instagram : <a href="#">link_login</a></p>
+        <div class="contacts-text">
+          <h3>Photographer, Creative Director & Cinematographer based in LA</h3>
+          <p>Lauren was raised in Florida and fled to Portland, OR to pursue photography after completing her BFA in 2011. NYC was next, where she continued working as a freelance photographer & graphic designer. Turns out New York has some really cold winters, so it was onward to Los Angeles.</p>
+          <h3>Clientele include:</h3>
+          <p>Prada, Wolford Fashion, Sebastian, Dazed, Urban Outfitters, British Vogue, Sam Edelman, Levi's, Floravere, Schön! Magazine, Pair of Thieves, Beautycon, Select World, CYN, Moses Sumney</p>
+          <hr>
+          <h4>Lets talk!</h4>
+          <p>Email: 2321321@gmail.com</p>
+          <h4>Social media:</h4>
+          <p>Instagram : <a href="#">link_login</a></p>
+      </div>
     </article>
     <footer>
             <hr>
