--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <!----------
             <li class="nav-item">
@@ -43,32 +43,32 @@
     <article id="main-content">
         <div class="photogallery">
           <div class="photogallery-column">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
+            <img src="img/photo_2020-04-11_19-19-47.jpg">
+            <img src="img/photo_2020-04-11_19-20-19.jpg">
+            <img src="img/photo_2020-04-11_19-20-21.jpg">
+            <img src="img/photo_2020-04-11_19-20-23.jpg">
+            <img src="img/photo_2020-04-11_19-20-25.jpg">
           </div>
             <div class="photogallery-column">
-          <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-          <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-          <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-          <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-          <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
+          <img src="img/photo_2020-04-11_19-20-31.jpg">
+          <img src="img/photo_2020-04-11_19-20-33.jpg">
+          <img src="img/photo_2020-04-11_19-20-35.jpg">
+          <img src="img/photo_2020-04-11_19-20-38.jpg">
+          <img src="img/photo_2020-04-11_19-20-40.jpg">
         </div>
         <div class="photogallery-column">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-            <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
+            <img src="img/photo_2020-04-11_19-20-42.jpg">
+            <img src="img/photo_2020-04-11_19-20-44.jpg">
+            <img src="img/photo_2020-04-11_19-20-47.jpg">
+            <img src="img/photo_2020-04-11_19-21-04.jpg">
+            <img src="img/photo_2020-04-11_19-20-51.jpg">
           </div>
           <div class="photogallery-column">
-              <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-              <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-              <img src="img/best-nike-shoes-2019-martin-rose-monarch_2.png">
-              <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
-              <img src="img/best-nike-shoes-2019-martin-rose-monarch.jpg">
+              <img src="img/photo_2020-04-11_19-20-54.jpg">
+              <img src="img/photo_2020-04-11_19-20-56.jpg">
+              <img src="img/photo_2020-04-11_19-20-59.jpg">
+              <img src="img/photo_2020-04-11_19-21-01.jpg">
+              <img src="img/photo_2020-04-11_19-20-49.jpg">
             </div>
       </div>
     </article>
@@ -76,7 +76,6 @@
         <hr>
       <div class="main-logo">
         <img src="img/pivnyk-logo.png" alt="Pivnyk Logo">
-        <p>ThePivnyk 2020</p>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
