--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="img/pivnyk_nav_logo.png" alt="Pivnyk Logo"></a>
+        <a class="navbar-brand" href="#"><h1>THE PIVNYK</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +34,7 @@
             </li>
             -------->
             <li class="nav-item active">
-              <a class="nav-link" href="/contacts.html">Contacts <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="contacts.html">Contacts <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
